# HAIAMM

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RUNNING.md  main.py  pyproject.toml  requirements.txt  test_gui_init.py  test_imports.py  test_phase1.py  test_phase2.py  test_phase3.py
.claude/: settings.local.json
analysis/: EXECUTIVE-SUMMARY-NIST-CMMC-Integration.md  HAIAMM-Fundamental-Controls-Maturity-Roadmap.md  NIST-DFARS-CMMC-HAIAMM-Alignment-Analysis.md  sm_pc_questions.md
certification/: HAIAMM-Certification-Program.md  HAIAMM-Certified-Assessor-Program.md  README.md
config/: haiamm_multi_domain_data.json  haiamm_multi_domain_data_v2.1.json  haiamm_multi_domain_data_v2.json  opensamm_v1_data.json
controllers/: questionnaire_controller.py
docs/: AI-IMPLEMENTATION-SCENARIOS.md  Arcanum-PI-Integration-Proposal.md  CISO-ONE-PAGER.md  CISO-PITCH-DECK.md  CISO-VIDEO-SCRIPT.md  CONSISTENCY-CHECKLIST.md  DOCUMENTATION-SUMMARY.md  ENCRYPTION.md  HAI-Security-Competitive-Intelligence.md  HAI-Security-GTM-Strategy.md  HAIAMM-COMPETITIVE-ANALYSIS.md  HAIAMM-Domain-Template.md  HAIAMM-Framework-Structure.md  HAIAMM-Handbook.md  HAIAMM-Integration-Analysis.md  HAIAMM-NDA-TEMPLATE.md  HAIAMM-Quick-Start-Guide.md  HAIAMM-Software-Domain.md  HAIAMM-Unified-Metrics-Framework.md  HAIAMM-VERIFHAI-PITCH-DECK.md  HAIAMM-v1.0-Documentation-Index.md  HAIAMM-v2.0-Assessment-Questionnaires.md  HAIAMM-v2.0-Executive-Summary.md  HAIAMM-v2.0-Implementation-Guide.md  HAIAMM-v2.0-Practice-Additions.md  HAIAMM-v2.2-Assessment-Questionnaires.md  HAIAMM-v2.2-Executive-Summary.md  (+21 more)
(+222 files in other folders)
